# seekbase

./: .gitignore  DESIGN.md  README.md  pyproject.toml
docs/api/: README.md  admin.md  connection.md  delete.md  embedders.md  errors.md  functions.md  http.md  insert.md  operations.md  query.md  schema.md  server.md  setup.md  sql-and-admin.md  tasks.md
docs/sdk/: README.md  embedder.md  errors.md  open.md  operator.md  policy.md  query.md  stream.md  task.md  write.md
docs/works/: README.md  architecture.md  concurrency.md  operator-plugin.md  operator-registry.md  pipeline-as-anything.md  pipeline-runtime-optimize.md  pipeline-streaming.md  schema.md  search.md  store.md  task.md  ticket.md  time_machine.md  tool-plugin.md  tool-registry.md
poc/: README.md  _shared.py  a_lance_ext.py  b_vss_fts.py  run.sh
scripts/: release.sh
seekbase/: __init__.py  _types.py  _wire.py  client.py  port.py  schema.py  server.py
seekbase/_engine/: _bridge.py  clock.py  duck.py  executor.py  files.py  plan.py  rewrite.py  search.py  text.py  vector.py
seekbase/api/: __init__.py  _route.py  delete.py  health.py  insert.py  query.py  rebuild.py  remote.py  tasks.py  writes.py
seekbase/embedders/: __init__.py  api.py
seekbase/operator/: __init__.py  base.py  builtins.py  policy.py  registry.py
seekbase/runtime/: __init__.py  readpool.py
seekbase/service/: __init__.py  admin.py  admin_service.py  dispatch.py  embedding_service.py  file_service.py  pipeline_service.py  query.py  read_service.py  search_service.py  store.py  store_service.py  stream_service.py  task_service.py  ticket_service.py  tickets.py  write.py  write_service.py
seekbase/struct/: __init__.py  request.py  row.py  schema.py  task.py  ticket.py
tests/: README.md  conftest.py  test_m1_orm.py  test_m1_server.py
tests/basic_orm/: README.md  test.py
tests/embedder_live/: README.md  test.py
tests/file_mirror/: README.md  test.py
tests/insert_only/: README.md  test.py
tests/journey/: README.md  test.py
tests/pipeline/: README.md  test.py
tests/policy/: README.md  test.py
tests/quickstart/: README.md  test.py
tests/read_write/: README.md  test.py
tests/readonly_guard/: README.md  test.py
tests/schema/: README.md  test.py
tests/search/: README.md  test.py
tests/server/: README.md  test.py
tests/streaming/: README.md  test.py
tests/tasks/: README.md  test.py
tests/time_machine/: README.md  test.py
tests/vacuum/: README.md  test.py
