[project]
name = "seekbase"
version = "0.0.1"
description = "A supabase-style embedded data port with semantic search as a first-class operator (DuckDB + LanceDB)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "seekbase" }]
keywords = ["duckdb", "lancedb", "orm", "vector-search", "embedded-database"]
dependencies = [
    "duckdb>=1.1",
    "pydantic>=2",
    "httpx>=0.27",   # default embedder (ApiEmbedder) is core — works out of the box
    # NOTE: lancedb is added in M3 (vector engine). M1 is pure DuckDB.
]

[project.optional-dependencies]
server = ["uvicorn>=0.30"]   # to serve the port over HTTP (client side needs only httpx, core)
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff", "mypy"]
# TODO: st = ["sentence-transformers>=3"]  # local-model embedder, later (DESIGN §10)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seekbase"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
