[project]
name = "seekbase"
version = "0.0.1"
description = "A supabase-style embedded data port with semantic search as a first-class operator (single-engine DuckDB: vss + fts)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "seekbase" }]
keywords = ["duckdb", "vss", "fts", "orm", "vector-search", "embedded-database"]
dependencies = [
    "duckdb>=1.1",       # single engine: structured + vector (vss/HNSW) + full-text (fts/BM25)
    "jieba>=0.42",       # Chinese tokenizer for full-text (BM25) search
    "httpx>=0.27",       # HTTP client (Seekbase.connect) + default embedder (ApiEmbedder)
    # vss + fts are DuckDB extensions, INSTALL/LOAD-ed at open() (no extra pip dep).
    # server is standard via seekbase_server() — a zero-dep hand-rolled ASGI app.
    # The ASGI *runner* (uvicorn/hypercorn/…) is injected by the host, not bundled.
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff", "mypy", "uvicorn>=0.30"]
# TODO: st = ["sentence-transformers>=3"]  # local-model embedder, later (DESIGN §10)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seekbase"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "test.py"]   # scenarios live in <name>/test.py

[tool.ruff]
line-length = 100
target-version = "py311"
